Another attempt to fix #226